# LowpolyBuildings

./: .gitignore  CMakeLists.txt  README.md  init.ps1  init.sh
algorithms/: CMakeLists.txt
algorithms/include/engine/: CarvedMeshGenerator.h  Common.h  Generator.h  Graph.h  LowpolyGen.h  PolygonMeshProcessing.h  Silhouette.h  VisualHullConstructor.h  calculateParetoSet.h  calculateTau.h  calculateTau.hpp  mathUtil.h  repairMesh.h
algorithms/src/: CarvedMeshGenerator.cc  Generator.cc  Graph.cc  PolygonMeshProcessing.cc  Silhouette.cc  VisualHullConstructor.cc  calculateParetoSet.cc  calculateTau.cc  mathUtil.cc
demo/: CMakeLists.txt  demo.cc
renderer/: CMakeLists.txt
renderer/include/: OBJLoader.h  OpenGLRenderer.h  camera.h  renderer.h  scene.h  shaderBuilder.h
renderer/src/: OBJLoader.cc  OpenGLRenderer.cc  camera.cc  scene.cc  shaderBuilder.cc
resources/shaders/: shaderFrag.glsl  shaderVert.glsl
